--- a/frontend-bar/src/app/components/user/list-user/list-user.component.html
+++ b/frontend-bar/src/app/components/user/list-user/list-user.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-
+<a href="/rols"> rols</a>
 <section>
     <div class="mat-elevation-z8">
         <div class="search_add">
