--- a/frontend-bar/src/app/components/event/list-event/list-event.component.html
+++ b/frontend-bar/src/app/components/event/list-event/list-event.component.html
@@ -4,7 +4,7 @@
     <div class="mat-elevation-z8">
         <div class="search_add">
             <mat-form-field>
-                <mat-label>Filter</mat-label>
+                <mat-label>{{ "filter" | translate }}</mat-label>
                 <input matInput #input (keyup)="eventFilter($event)">
             </mat-form-field>
             <button (click)="addEvent()" mat-flat-button color="primary"><mat-icon>add</mat-icon></button>
@@ -28,9 +28,9 @@
                 <th mat-header-cell *matHeaderCellDef></th>
                 <td mat-cell *matCellDef="let element">
                     <mat-icon (click)="addEvent(element.id)" class="btn-edit"
-                        matTooltip="{{ 'edit' | translate }} {{ element.nameEvent }}">edit</mat-icon>
+                        matTooltip="{{ 'edit' | translate }} {{ 'event' | translate }}">edit</mat-icon>
                     <mat-icon (click)="deleteEvent(element.id)" class="btn-delete"
-                        matTooltip="{{ 'delete' | translate }} {{ element.nameEvent }}">delete</mat-icon>
+                        matTooltip="{{ 'delete' | translate }} {{ 'event' | translate }}">delete</mat-icon>
                 </td>
             </ng-container>
 
