--- a/frontend-bar/src/app/components/navbar/navbar.component.html
+++ b/frontend-bar/src/app/components/navbar/navbar.component.html
@@ -2,6 +2,7 @@
     <div class="option_container">
         <a href="/users"> {{"users" | translate}}</a>
         <a href="/events"> {{"events" | translate }}</a>
+        <a href="/products"> {{"products" | translate }}</a>
         <a (click)="logOut()">{{"exit" | translate}}</a>
     </div>
     <div class="language-buttons">
@@ -19,6 +20,7 @@
 <div class="option_container_menu">
     <a href="/users"> {{"users" | translate}}</a>
     <a href="/events"> {{"events" | translate }}</a>
+    <a href="/products"> {{"products" | translate }}</a>
     <a (click)="logOut()">{{"exit" | translate}}</a>
     <div class="language-buttons_h">
         <button (click)="es()" class="es">ES</button>
