--- a/frontend-bar/src/app/components/event/list-event/list-event.component.html
+++ b/frontend-bar/src/app/components/event/list-event/list-event.component.html
@@ -28,9 +28,9 @@
                 <th mat-header-cell *matHeaderCellDef></th>
                 <td mat-cell *matCellDef="let element">
                     <mat-icon (click)="addEvent(element.id)" class="btn-edit"
-                        matTooltip="{{ 'edit' | translate }} {{ element.nameEvent }}">edit</mat-icon>
+                        matTooltip="{{ 'edit' | translate }} {{ element.name_event }}">edit</mat-icon>
                     <mat-icon (click)="deleteEvent(element.id)" class="btn-delete"
-                        matTooltip="{{ 'delete' | translate }} {{ element.nameEvent }}">delete</mat-icon>
+                        matTooltip="{{ 'delete' | translate }} {{ element.name_event }}">delete</mat-icon>
                 </td>
             </ng-container>
 
