--- a/frontend-bar/src/app/components/rol/list-rol/list-rol.component.html
+++ b/frontend-bar/src/app/components/rol/list-rol/list-rol.component.html
@@ -1,6 +1,5 @@
 <app-navbar></app-navbar>
 <section>
-
     <div class="mat-elevation-z8">
         <div class="search_add">
             <mat-form-field>
@@ -19,7 +18,7 @@
             </ng-container>
 
             <ng-container matColumnDef="action">
-                <th mat-header-cell *matHeaderCellDef></th>
+                <th mat-header-cell *matHeaderCellDef>{{ "actions" | translate }}</th>
                 <td mat-cell *matCellDef="let element">
                     <mat-icon (click)="addRol(element.id)" class="btn-edit"
                         matTooltip="{{ 'edit' | translate }} {{ element.name }}">edit</mat-icon>
