--- a/frontend-bar/src/app/components/status/list-status/list-status.component.html
+++ b/frontend-bar/src/app/components/status/list-status/list-status.component.html
@@ -7,8 +7,8 @@
                 <mat-label>Filter</mat-label>
                 <input matInput #input (keyup)="eventFilter($event)">
             </mat-form-field>
-            <button (click)="addUser()" mat-flat-button color="primary">
-                <mat-icon class="btn-delete">person_add</mat-icon>
+            <button (click)="addStatus()" mat-flat-button color="primary">
+                <mat-icon>add</mat-icon>
             </button>
         </div>
 
@@ -16,34 +16,16 @@
 
             <!-- Name Column -->
             <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "name" | translate }}</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "nameStatus" | translate }}</th>
                 <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-            </ng-container>
-
-            <!-- Email Column -->
-            <ng-container matColumnDef="email">
-                <th mat-header-cell *matHeaderCellDef>{{ "email" | translate }}</th>
-                <td mat-cell *matCellDef="let element">{{ element.email }}</td>
-            </ng-container>
-
-            <!-- Status Column -->
-            <ng-container matColumnDef="status">
-                <th mat-header-cell *matHeaderCellDef>{{ "status" | translate }}</th>
-                <td mat-cell *matCellDef="let element">{{ element.status }}</td>
-            </ng-container>
-
-            <!-- Rol Column -->
-            <ng-container matColumnDef="rol">
-                <th mat-header-cell *matHeaderCellDef>{{ "rol" | translate }}</th>
-                <td mat-cell *matCellDef="let element">{{ element.rol }}</td>
             </ng-container>
 
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>{{ "actions" | translate }}</th>
                 <td mat-cell *matCellDef="let element" id="tdaction">
-                    <mat-icon (click)="addUser(element.id)" class="btn-edit"
+                    <mat-icon (click)="addStatus(element.id)" class="btn-edit"
                         matTooltip="{{ 'edit' | translate }} {{ element.name }}">edit</mat-icon>
-                    <mat-icon (click)="deleteUser(element.id)" class="btn-delete"
+                    <mat-icon (click)="deleteStatus(element.id)" class="btn-delete"
                         matTooltip="{{ 'delete' | translate }} {{ element.name }}" >delete</mat-icon>
                 </td>
             </ng-container>
