--- a/frontend-bar/src/custom-theme.scss
+++ b/frontend-bar/src/custom-theme.scss
@@ -1,21 +1,38 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
-// Plus imports for other components in your app.
 
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
+// Include the common styles for Angular Material.
 @include mat.core();
 
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$frontend-bar-primary: mat.define-palette(mat.$indigo-palette);
-$frontend-bar-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+// Define your custom primary color using hexadecimal value
+$custom-primary: (
+  50: #fce4d6,
+  100: #f8cbb8,
+  200: #f3b29a,
+  300: #ef9980,
+  400: #eb825e,
+  500: #e6683f,
+  600: #e15b38,
+  700: #db4f32,
+  800: #d4432c,
+  900: #cd3125,
+  A100: #ffffff,
+  A200: #fff4f3,
+  A400: #ffc4b2,
+  A700: #ffb199
+);
 
-// The warn palette is optional (defaults to red).
+// Manually define custom palette object
+$frontend-bar-primary: (
+  default: #55211c,
+  lighter: #fce4d6,
+  darker: #db4f32,
+  contrast: #fce4d6
+);
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+$frontend-bar-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 $frontend-bar-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
@@ -24,14 +41,11 @@ $frontend-bar-theme: mat.define-light-theme((
   color: (
     primary: $frontend-bar-primary,
     accent: $frontend-bar-accent,
-    warn: $frontend-bar-warn,
+    warn: $frontend-bar-warn
   ),
   typography: mat.define-typography-config(),
   density: 0
 ));
 
 // Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
 @include mat.all-component-themes($frontend-bar-theme);
-
