--- a/frontend-bar/src/app/components/navbar/navbar.component.html
+++ b/frontend-bar/src/app/components/navbar/navbar.component.html
@@ -1,11 +1,12 @@
 <nav class="navbar">
     <div class="option_container">
-        <a href="/users">{{"users" | translate}}</a>
-        <a href="/events">{{"events" | translate }}</a>
-        <a href="/products">{{"products" | translate }}</a>
-        <a href="/order">{{"orders" | translate }}</a>
+        <a href="/chart">{{ "home" | translate }}</a>
+        <a href="/users">{{ "users" | translate }}</a>
+        <a href="/events">{{ "events" | translate }}</a>
+        <a href="/products">{{ "products" | translate }}</a>
+        <a href="/order">{{ "orders" | translate }}</a>
         <a type="button" mat-menu-item [matMenuTriggerFor]="setting">{{ "setting" | translate }}</a>
-        <a (click)="logOut()">{{"exit" | translate}}</a>
+        <a (click)="logOut()">{{ "exit" | translate}}</a>
     </div>
     <div class="language-buttons">
         <button (click)="es()" class="es">ES</button>
@@ -20,12 +21,13 @@
 
 </nav>
 <div class="option_container_menu">
-    <a href="/users">{{"users" | translate}}</a>
-    <a href="/events">{{"events" | translate }}</a>
-    <a href="/products">{{"products" | translate }}</a>
-    <a href="/order">{{"orders" | translate }}</a>
+    <a href="/chart">{{ "home" | translate }}</a>
+    <a href="/users">{{ "users" | translate }}</a>
+    <a href="/events">{{ "events" | translate }}</a>
+    <a href="/products">{{ "products" | translate }}</a>
+    <a href="/order">{{ "orders" | translate }}</a>
     <a mat-menu-item [matMenuTriggerFor]="setting">{{ "setting" | translate }}</a>
-    <a (click)="logOut()">{{"exit" | translate}}</a>
+    <a (click)="logOut()">{{ "exit" | translate}}</a>
     <div class="language-buttons_h">
         <button (click)="es()" class="es">ES</button>
         <button (click)="en()" class="en">EN</button>
