--- a/frontend-bar/src/app/components/order/list-order-employee/list-order-employee.component.html
+++ b/frontend-bar/src/app/components/order/list-order-employee/list-order-employee.component.html
@@ -38,8 +38,18 @@
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>{{ "actions" | translate }}</th>
                 <td mat-cell *matCellDef="let element" id="tdaction">
-                    <mat-icon (click)="addOrder(element.id)" class="btn-edit" matTooltip="{{ 'edit' | translate }}">edit</mat-icon>
-                    <mat-icon (click)="deleteOrder(element.id)" class="btn-delete" matTooltip="{{ 'delete' | translate }}">delete</mat-icon>
+                    <button class="buttonaction" [disabled]="element.status === 'Canceled' || element.status === 'Paid' || element.status === 'Inactive'">
+                        <mat-icon *ngIf="element.status === 'Active'" class="btn-delete" matTooltip="{{ 'Pedir' | translate }}">liquor</mat-icon>
+                        <mat-icon *ngIf="element.status === 'Canceled' || element.status === 'Paid' || element.status === 'Inactive'" class="btn-delete">liquor</mat-icon>
+                    </button>
+                    <button class="buttonaction" (click)="addOrder(element.id)" [disabled]="element.status === 'Canceled' || element.status === 'Paid' || element.status === 'Inactive'">
+                        <mat-icon *ngIf="element.status === 'Active'" class="btn-edit" matTooltip="{{ 'paided' | translate }}">paid</mat-icon>
+                        <mat-icon *ngIf="element.status === 'Canceled' || element.status === 'Paid' || element.status === 'Inactive'" class="btn-edit">paid</mat-icon>
+                    </button>
+                    <button class="buttonaction" (click)="deleteOrder(element.id)" [disabled]="element.status === 'Canceled' || element.status === 'Paid' || element.status === 'Inactive'">
+                        <mat-icon *ngIf="element.status === 'Active'" class="btn-delete" matTooltip="{{ 'cancel' | translate }}">cancel</mat-icon>
+                        <mat-icon *ngIf="element.status === 'Canceled' || element.status === 'Paid' || element.status === 'Inactive'" class="btn-delete">cancel</mat-icon>
+                    </button>
                 </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
