--- a/frontend-bar/src/app/components/order-products/list-orderproduct-employee/list-orderproduct-employee.component.html
+++ b/frontend-bar/src/app/components/order-products/list-orderproduct-employee/list-orderproduct-employee.component.html
@@ -3,7 +3,7 @@
 <div class="containerOrderProduct">
   <section class="left_form">
     <h1>{{ "askFor" | translate }}</h1>
-    <form [formGroup]="form">
+    <form [formGroup]="form" (ngSubmit)="addProductOrder()">
       <!-- Product Select -->
       <mat-form-field>
         <mat-label>Seleccionar producto</mat-label>
@@ -12,6 +12,9 @@
           <mat-option *ngFor="let product of filteredProducts" [value]="product.id">{{ product.name_product }}</mat-option>
         </mat-select>
       </mat-form-field>
+      <div class="error">
+        <mat-error *ngIf="form.get('id_product')?.hasError('required') && form.get('id_product')?.touched">{{ "requiredStatus" | translate }}</mat-error>
+      </div>
       <!-- Name Product Input -->
       <mat-form-field class="example-full-width">
         <mat-label>{{ "nameProduct" | translate }}</mat-label>
@@ -27,15 +30,22 @@
       <!-- Count Input -->
       <mat-form-field>
         <mat-label>{{ "stock" | translate }}</mat-label>
-        <input type="number" matInput placeholder="0" min="0">
+        <input type="number" matInput placeholder="0" min="0" formControlName="count">
       </mat-form-field>
-       <!-- Image Product Img -->
-      <div class="img_">
-        <img [src]="baseUrl + imageProduct + '?' + refreshTime" alt="Product Image">
+      <div class="error">
+        <mat-error *ngIf="form.get('count')?.hasError('required') && form.get('count')?.touched">{{ "requiredStatus" | translate }}</mat-error>
       </div>
+      <!-- Image Product Img -->
+      <div class="img_">
+        <img *ngIf="form.get('id_product')?.value" [src]="baseUrl + imageProduct + '?' + refreshTime" alt="Product Image">
+        <img *ngIf="!form.get('id_product')?.value" src="../../../../assets/img/products/Imagenotfound.png" alt="Logo">
+      </div>
+      <mat-dialog-actions align="end">
+        <button type="submit" [disabled]="form.invalid" mat-button color="primary">Agregar</button>
+      </mat-dialog-actions>
     </form>
   </section>
-  
+
   <section class="right_form">
     <h1>{{ "orderEmployee" | translate }}</h1>
     <div class="table-responsive">
@@ -75,8 +85,7 @@
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef>{{ "actions" | translate }}</th>
           <td mat-cell *matCellDef="let element" id="tdaction">
-            <mat-icon class="btn-edit" matTooltip="{{ 'edit' | translate }} {{ element.name_product }}">edit</mat-icon>
-            <mat-icon class="btn-delete" matTooltip="{{ 'delete' | translate }} {{ element.name_product }}">delete</mat-icon>
+            <mat-icon class="btn-delete" (click)="deleteOrderProduct(element.id)" matTooltip="{{ 'delete' | translate }} {{ element.name_product }}">delete</mat-icon>
           </td>
         </ng-container>
 
