--- a/frontend-bar/src/app/components/order-products/list-orderproduct-employee/list-orderproduct-employee.component.css
+++ b/frontend-bar/src/app/components/order-products/list-orderproduct-employee/list-orderproduct-employee.component.css
@@ -4,6 +4,19 @@
     src: url("https://db.onlinewebfonts.com/t/066ce24dae3730ed6c648b09efaea93a.eot?#iefix") format("embedded-opentype"), url("https://db.onlinewebfonts.com/t/066ce24dae3730ed6c648b09efaea93a.woff2") format("woff2"), url("https://db.onlinewebfonts.com/t/066ce24dae3730ed6c648b09efaea93a.woff") format("woff"), url("https://db.onlinewebfonts.com/t/066ce24dae3730ed6c648b09efaea93a.ttf") format("truetype"), url("https://db.onlinewebfonts.com/t/066ce24dae3730ed6c648b09efaea93a.svg#Acumin Variable Concept") format("svg");
     font-weight: 400;
 }
+.example-right-align {
+    text-align: right;
+}
+
+input.example-right-align::-webkit-outer-spin-button,
+input.example-right-align::-webkit-inner-spin-button {
+    display: none;
+}
+
+input.example-right-align {
+    text-align: right;
+}
+
 .containerOrderProduct{
     width: 100%;
     padding: 20px;
@@ -16,6 +29,11 @@
     display: flex;
     flex-direction: column;
     width: 50%;
+    -webkit-box-shadow: 0px 0px 15px 5px rgba(189, 189, 189, 1);
+    -moz-box-shadow: 0px 0px 15px 5px rgba(189, 189, 189, 1);
+    box-shadow: 0px 0px 15px 5px rgba(189, 189, 189, 1);
+    padding: 10px;
+    box-sizing: border-box;
 }
 
 form{
@@ -24,10 +42,10 @@ form{
     width: 100%;
 }
 .img_{
-    width: 50%;
+    width: 100%;
 }
 .img_ img{
-    width: 90%;
+    width: 100%;
     object-fit: contain;
     margin-bottom: 10px;
 }
@@ -39,7 +57,25 @@ h1{
     font-weight: 600;
     color: #390708;
 }
-
+.container_data{
+    display: flex;
+    justify-content: space-between;
+    gap: 3%;
+}
+.right_input{
+    display: flex;
+    flex-direction: column;
+    width: 65%;
+}
+.left_img{
+    width: 30%;
+    display: flex;
+    align-items: center;
+}
+.buttonAdd{
+    border: 1px solid #390708 !important;
+    margin-bottom: 15px;
+}
 @media screen and (min-width: 200px) and (max-width: 600px){
     .containerOrderProduct{
         display: flex;
