--- a/frontend-bar/src/app/components/order-products/list-orderproduct-employee/list-orderproduct-employee.component.html
+++ b/frontend-bar/src/app/components/order-products/list-orderproduct-employee/list-orderproduct-employee.component.html
@@ -9,39 +9,52 @@
         <mat-label>Seleccionar producto</mat-label>
         <mat-select formControlName="id_product" (selectionChange)="onSelectionChange($event)" (closed)="onClosed()">
           <input #productInput (keyup)="onKey($event)" matInput placeholder="{{ 'filter' | translate }}">
-          <mat-option *ngFor="let product of filteredProducts" [value]="product.id">{{ product.name_product }}</mat-option>
+          <mat-option *ngFor="let product of filteredProducts" [value]="product.id">{{ product.name_product
+            }}</mat-option>
         </mat-select>
       </mat-form-field>
       <div class="error">
-        <mat-error *ngIf="form.get('id_product')?.hasError('required') && form.get('id_product')?.touched">{{ "requiredStatus" | translate }}</mat-error>
+        <mat-error *ngIf="form.get('id_product')?.hasError('required') && form.get('id_product')?.touched">{{
+          "requiredStatus" | translate }}</mat-error>
       </div>
-      <!-- Name Product Input -->
-      <mat-form-field class="example-full-width">
-        <mat-label>{{ "nameProduct" | translate }}</mat-label>
-        <input matInput disabled [value]="nameProduct">
-      </mat-form-field>
-      <!-- Price Product Input -->
-      <mat-form-field floatLabel="always">
-        <mat-label>{{ "price" | translate }}</mat-label>
-        <input matInput type="number" disabled class="example-right-align" [value]="priceProduct">
-        <span matTextPrefix>$&nbsp;</span>
-        <span matTextSuffix>.00</span>
-      </mat-form-field>
-      <!-- Count Input -->
-      <mat-form-field>
-        <mat-label>{{ "stock" | translate }}</mat-label>
-        <input type="number" matInput placeholder="0" min="0" formControlName="count">
-      </mat-form-field>
-      <div class="error">
-        <mat-error *ngIf="form.get('count')?.hasError('required') && form.get('count')?.touched">{{ "requiredStatus" | translate }}</mat-error>
+      <div class="container_data">
+        <div class="left_img">
+          <!-- Image Product Img -->
+          <div class="img_">
+            <img *ngIf="form.get('id_product')?.value" [src]="baseUrl + imageProduct + '?' + refreshTime"
+              alt="Product Image">
+            <img *ngIf="!form.get('id_product')?.value" src="../../../../assets/img/products/Imagenotfound.png"
+              alt="Logo">
+          </div>
+        </div>
+        <div class="right_input">
+          <!-- Name Product Input -->
+          <mat-form-field class="example-full-width">
+            <mat-label>{{ "nameProduct" | translate }}</mat-label>
+            <input matInput disabled [value]="nameProduct">
+          </mat-form-field>
+          <!-- Price Product Input -->
+          <mat-form-field floatLabel="always">
+            <mat-label>{{ "price" | translate }}</mat-label>
+            <input matInput type="number" disabled class="example-right-align" [value]="priceProduct">
+            <span matTextPrefix>$&nbsp;</span>
+            <span matTextSuffix>.00</span>
+          </mat-form-field>
+          <!-- Count Input -->
+          <mat-form-field>
+            <mat-label>{{ "stock" | translate }}</mat-label>
+            <input type="number" matInput placeholder="0" min="0" formControlName="count">
+          </mat-form-field>
+          <div class="error">
+            <mat-error *ngIf="form.get('count')?.hasError('required') && form.get('count')?.touched">{{ "requiredStatus"
+              |
+              translate }}</mat-error>
+          </div>
+        </div>
       </div>
-      <!-- Image Product Img -->
-      <div class="img_">
-        <img *ngIf="form.get('id_product')?.value" [src]="baseUrl + imageProduct + '?' + refreshTime" alt="Product Image">
-        <img *ngIf="!form.get('id_product')?.value" src="../../../../assets/img/products/Imagenotfound.png" alt="Logo">
-      </div>
+
       <mat-dialog-actions align="end">
-        <button type="submit" [disabled]="form.invalid" mat-button color="primary">Agregar</button>
+        <button type="submit" [disabled]="form.invalid" mat-button color="primary" class="buttonAdd">Agregar</button>
       </mat-dialog-actions>
     </form>
   </section>
@@ -85,7 +98,8 @@
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef>{{ "actions" | translate }}</th>
           <td mat-cell *matCellDef="let element" id="tdaction">
-            <mat-icon class="btn-delete" (click)="deleteOrderProduct(element.id)" matTooltip="{{ 'delete' | translate }} {{ element.name_product }}">delete</mat-icon>
+            <mat-icon class="btn-delete" (click)="deleteOrderProduct(element.id)"
+              matTooltip="{{ 'delete' | translate }} {{ element.name_product }}">delete</mat-icon>
           </td>
         </ng-container>
 
